# multi_robot_slam_ws

./: baseline_merged_map.pgm  baseline_merged_map.yaml  build_log.txt  frames_2026-02-02_14.47.59.gv  frames_2026-02-03_11.24.05.gv  frames_2026-02-10_17.01.07.gv  frames_2026-02-13_10.49.14.gv  frames_2026-02-13_16.36.14.gv  frames_2026-02-13_16.36.44.gv  frames_2026-02-13_17.17.45.gv
docs/: CHANGELOG.md  README.md  TODO.md
install/: local_setup.sh  setup.sh
install/explore_lite/include/explore/: costmap_client.h  costmap_tools.h  explore.h  frontier_search.h
install/explore_lite/lib/explore_lite/: explore
install/explore_lite/share/explore_lite/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/multi_robot_slam/lib/multi_robot_slam/: odom_to_tf.py  scan_frame_fixer.py
install/multi_robot_slam/share/multi_robot_slam/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  (+4 more)
log/: latest_build
src/multi_robot_slam/: CMakeLists.txt
src/multi_robot_slam/config/: multi_robot_params.yaml  multi_robot_slam.yaml  rviz_config.rviz  slam_params.yaml
src/multi_robot_slam/launch/: central_server.launch.py  gz_multi_robot.launch.py  multi_robot_slam.launch.py  single_robot_slam.launch.py
src/multi_robot_slam/scripts/: odom_to_tf.py  smooth_circle.py
src/multi_robot_slam/urdf/: robot.urdf.xacro
src/multi_robot_slam/worlds/: multi_robot_world.sdf
src/multi_robot_slam_py/: package.xml  setup.cfg  setup.py
src/multi_robot_slam_py/multi_robot_slam_py/: central_server.py
(+68 files in other folders)
